--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,89 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Профессиональный HTML и CSS</a>», уровень 2.</p>
-
+    <header class="page-header">
+      <a class="page-header__logo" href="https://htmlacademy.ru/intensive/adaptive">
+        <img class="page-header__logo-image" src="img/logotype-mobile.svg" width="30" height="30" alt="Логотип Седона">
+      </a>
+      <button class="page-header__toggle" type="button">Открыть меню</button>
+      <nav class="main-nav">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item"><a>ГЛАВНАЯ</a></li>
+          <li class="site-list__item"><a href="photo.html">ФОТО И ВИДЕО</a></li>
+          <li class="site-list__item"><a href="form.html">ФОРМА ОТЗЫВА</a></li>
+          <li class="site-list__item"><a href ="#">HTML ACADEMY</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="page-main">
+      <div class="page-main__top">
+        <img class="page-main__top-img" src="source/img/sedona.png" width="0" height="0" alt="Welcome to Sedona">
+      </div>
+      <h1 class="page-main__title">СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h1>
+      <section class="reasons">
+        <h2 class="reasons__title"> РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН!</h2>
+          <ul class="reasons__list">
+            <li class="reasons__item reasons__item--reason-first">
+              <h3 class="reasons__item__title">НАСТОЯЩИЙ ГОРОДОК</h3>
+              <span class="reasons__item__num">№1</span>
+              <p class="reasons__item__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
+              <img class="reasons-item__image" src="img/photo-1.jpg" width="30" height="30" alt="фото Седоны">
+            </li>
+            <li class="reasons__item features">
+              <div class="features__item">
+                <h3 class="features__item__title">Жилье</h3>
+                <p class="features__item__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              </div>
+              <div class="features__item">
+                <h3 class="features__item__title">Еда</h3>
+                <p class="features__item__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              </div>
+              <div class="features__item">
+                <h3 class="features__item__title">Сувениры</h3>
+                <p class="features__item__text">Не только китайского, но и местного производства!</p>
+              </div>
+            </li>
+            <li class="reasons__item reasons__item--reason-second">
+              <h3 class="reasons__item__title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+              <span class="reasons__item__num">№2</span>
+              <p class="reasons__item__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+              <img class="reasons-item__image" src="img/photo-2.jpg" width="30" height="30" alt="фото мост дьявола">
+            </li>
+            <li class="reasons__item reasons__item--reason-third">
+              <h3 class="reasons__item__title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+              <span class="reasons__item__num">№3</span>
+              <p class="reasons__item__text">Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="reasons__item reasons__item--reason-fourth">
+              <h3 class="reasons__item__title">КРАСИВАЯ ДОРОГА</h3>
+              <span class="reasons__item__num">№4</span>
+              <p class="reasons__item__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="reasons__item reasons__item--reason-fifth">
+              <h3 class="reasons__item__title">МАЛО ТУРИСТОВ</h3>
+              <span class="reasons__item__num">№5</span>
+              <p class="reasons__item__text">Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+          </ul>
+      </section>
+      <section class="hotels-searching">
+        <h3 class="hotels-searching__title">ЗАИНТЕРЕСОВАЛИСЬ?</h3>
+        <p class="hotels-searching__text">Укажите предполагаемые даты поездки,
+          и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="hotels-searching__link" href="hotels.html">Найти гостиницу</a>
+      </section>
+      <div class="map">
+          <img class="map__sedona" src="img/map-sedona.png" width="30" height="30" alt="Седона на карте">
+      </div>
+    </main>
+    <footer class="page-footer">
+      <span class="hashtag-sedona">#VISITSEDONA</span>
+      <div class="social-networks">
+        <a class="social-networks__twitter" href="https://twitter.com"><span class="visually-hidden">Седона в Твиттере</span></a>
+        <a class="social-networks__fb" href="https://facebook.com"><span class="visually-hidden">Седона в Фэйсбук</span></a>
+        <a class="social-networks__youtube" href="https://youtube.com"><span class="visually-hidden">Седона на Youtube</span></a>
+      </div>
+      <p class="powered-by">Разработано<a class="powered-by-link" href="https://htmlacademy.ru/intensive/adaptive">htmlacademy.ru</a></p>
+    </footer>
   </body>
 </html>
