--- a/source/index.html
+++ b/source/index.html
@@ -4,31 +4,32 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
-  <body>
-    <header class="page-header">
-      <a class="page-header__logo" href="https://htmlacademy.ru/intensive/adaptive">
-        <img class="page-header__logo-image" src="img/logotype-mobile.svg" width="30" height="30" alt="Логотип Седона">
+  <body class="page">
+    <header class="page__header page-header">
+      <a class="page-header__logo logo" href="https://htmlacademy.ru/intensive/adaptive">
+        <img class="logo__image" src="img/logotype-mobile.svg" width="30" height="30" alt="Логотип Седона">
       </a>
       <button class="page-header__toggle" type="button">Открыть меню</button>
-      <nav class="main-nav">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item"><a>ГЛАВНАЯ</a></li>
-          <li class="site-list__item"><a href="photo.html">ФОТО И ВИДЕО</a></li>
-          <li class="site-list__item"><a href="form.html">ФОРМА ОТЗЫВА</a></li>
-          <li class="site-list__item"><a href ="#">HTML ACADEMY</a></li>
+      <nav class="main-nav page-header__nav">
+        <ul class="page-header__nav__list site-list">
+          <li class="site-list__item"><a class="site-list__item-link">Главная</a></li>
+          <li class="site-list__item"><a class="site-list__item-link" href="photo.html">Фото и видео</a></li>
+          <li class="site-list__item"><a class="site-list__item-link" href="form.html">Форма отзыва</a></li>
+          <li class="site-list__item"><a class="site-list__item-link" href ="#">html Academy</a></li>
         </ul>
       </nav>
     </header>
-    <main class="page-main">
-      <div class="page-main__top">
-        <img class="page-main__top-img" src="source/img/sedona.png" width="0" height="0" alt="Welcome to Sedona">
+    <main class="page__main page-main">
+      <h1 class="visually-hidden">Седона</h1>
+      <div class="page-main__promo promo">
+        <img class="promo__img" src="source/img/sedona.png" width="0" height="0" alt="Welcome to Sedona">
       </div>
-      <h1 class="page-main__title">СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h1>
-      <section class="reasons">
-        <h2 class="reasons__title"> РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН!</h2>
+      <h2 class="promo__content">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <section class="page-main__reasons reasons">
+        <h2 class="reasons__title"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h2>
           <ul class="reasons__list">
             <li class="reasons__item reasons__item--reason-first">
-              <h3 class="reasons__item__title">НАСТОЯЩИЙ ГОРОДОК</h3>
+              <h3 class="reasons__item__title">Настоящий городок</h3>
               <span class="reasons__item__num">№1</span>
               <p class="reasons__item__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
               <img class="reasons-item__image" src="img/photo-1.jpg" width="30" height="30" alt="фото Седоны">
@@ -48,46 +49,46 @@
               </div>
             </li>
             <li class="reasons__item reasons__item--reason-second">
-              <h3 class="reasons__item__title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+              <h3 class="reasons__item__title">Там есть Мост Дьявола</h3>
               <span class="reasons__item__num">№2</span>
               <p class="reasons__item__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               <img class="reasons-item__image" src="img/photo-2.jpg" width="30" height="30" alt="фото мост дьявола">
             </li>
             <li class="reasons__item reasons__item--reason-third">
-              <h3 class="reasons__item__title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+              <h3 class="reasons__item__title">Небольшая площадь</h3>
               <span class="reasons__item__num">№3</span>
               <p class="reasons__item__text">Все достопримечательности находятся очень близко</p>
             </li>
             <li class="reasons__item reasons__item--reason-fourth">
-              <h3 class="reasons__item__title">КРАСИВАЯ ДОРОГА</h3>
+              <h3 class="reasons__item__title">Красивая дорога</h3>
               <span class="reasons__item__num">№4</span>
               <p class="reasons__item__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="reasons__item reasons__item--reason-fifth">
-              <h3 class="reasons__item__title">МАЛО ТУРИСТОВ</h3>
+              <h3 class="reasons__item__title">Мало туристов</h3>
               <span class="reasons__item__num">№5</span>
               <p class="reasons__item__text">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
           </ul>
       </section>
-      <section class="hotels-searching">
-        <h3 class="hotels-searching__title">ЗАИНТЕРЕСОВАЛИСЬ?</h3>
+      <section class="page-main__hotels-searching hotels-searching">
+        <h3 class="hotels-searching__title">Заинтересовались?</h3>
         <p class="hotels-searching__text">Укажите предполагаемые даты поездки,
           и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="hotels-searching__link" href="hotels.html">Найти гостиницу</a>
+        <div class="map">
+            <img class="map__sedona" src="img/map-sedona.png" width="30" height="30" alt="Седона на карте">
+        </div>
       </section>
-      <div class="map">
-          <img class="map__sedona" src="img/map-sedona.png" width="30" height="30" alt="Седона на карте">
-      </div>
     </main>
-    <footer class="page-footer">
-      <span class="hashtag-sedona">#VISITSEDONA</span>
-      <div class="social-networks">
-        <a class="social-networks__twitter" href="https://twitter.com"><span class="visually-hidden">Седона в Твиттере</span></a>
-        <a class="social-networks__fb" href="https://facebook.com"><span class="visually-hidden">Седона в Фэйсбук</span></a>
-        <a class="social-networks__youtube" href="https://youtube.com"><span class="visually-hidden">Седона на Youtube</span></a>
-      </div>
-      <p class="powered-by">Разработано<a class="powered-by-link" href="https://htmlacademy.ru/intensive/adaptive">htmlacademy.ru</a></p>
+    <footer class="page__footer page-footer">
+      <span class="page-footer__hashtag-sedona">#VISITSEDONA</span>
+      <ul class="page-footer__social-networks social-networks">
+        <li class="social-networks__item"><a class="social-networks--twitter" href="https://twitter.com"><span class="visually-hidden">Седона в Твиттере</span></a></li>
+        <li class="social-networks__item"><a class="social-networks--fb" href="https://facebook.com"><span class="visually-hidden">Седона в Фэйсбук</span></a></li>
+        <li class="social-networks__item"><a class="social-networks--youtube" href="https://youtube.com"><span class="visually-hidden">Седона на Youtube</span></a></li>
+      </ul>
+      <p class="page-footer__powered-by powered-by">Разработано<a class="powered-by-link" href="https://htmlacademy.ru/intensive/adaptive">htmlacademy.ru</a></p>
     </footer>
   </body>
 </html>
