Исправил ошибку в форме

--- a/source/form.html
+++ b/source/form.html
@@ -82,9 +82,8 @@
             <textarea class="comment__text" name="comment" id="comment" placeholder="Опишите подробно все свои восторги"></textarea>
         </fieldset>
         <label for="send"></label>
-				<input class="send-button" name="send" id="send" type="submit" value="Отправить отзыв"> </form>
+				<input class="send-button" name="send" id="send" type="submit" value="Отправить отзыв">
       </form>
-
     </main>
     <footer class="page__footer page-footer">
       <span class="page-footer__hashtag-sedona">#VISITSEDONA</span>
