Разметил страницу с фото и видео

--- a/source/form.html
+++ b/source/form.html
@@ -21,7 +21,7 @@
     </header>
     <main class="page__form page-form">
       <h1 class="visually-hidden">Седона</h1>
-      <div class="page-main__promo form-promo">
+      <div class="page-form__promo form-promo">
         <img class="form-promo__img" src="source/img/sedona.png" width="0" height="0" alt="Welcome to Sedona">
         <h2 class="form-promo__content">Оставьте свой отзыв</h2>
         <p class="form-promo__text">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а так же о посещенных вами достопримечательностях</p>
