--- a/source/photo.html
+++ b/source/photo.html
@@ -36,7 +36,7 @@
             </figcaption>
         </figure>
         <figure class="gallery__photo photo">
-          <a class="photo__link"></a>><img class="photo__img" src="source/img/sedona.png" width="0" height="0" alt="Местная растительность"></a>
+          <a class="photo__link"><img class="photo__img" src="source/img/sedona.png" width="0" height="0" alt="Местная растительность"></a>
             <figcaption class="photo__inscription">
                 <p class="photo__name">Местная растительность</p>
                 <span class="photo__author">Автор фото: Сергей</span>
@@ -44,7 +44,7 @@
             </figcaption>
         </figure>
         <figure class="gallery__photo photo">
-          <a class="photo__link"></a>><img class="photo__img" src="source/img/sedona.png" width="0" height="0" alt="Дорога на север"></a>
+          <a class="photo__link"><img class="photo__img" src="source/img/sedona.png" width="0" height="0" alt="Дорога на север"></a>
             <figcaption class="photo_inscription">
                 <p class="photo__name">Дорога на север</p>
                 <span class="photo__author">Автор фото: Пётр</span>
@@ -52,7 +52,7 @@
             </figcaption>
         </figure>
         <figure class="gallery__photo photo">
-          <a class="photo__link"></a>><img class="photo__img" src="source/img/sedona.png" width="0" height="0" alt="Мост Дьявола"></a>
+          <a class="photo__link"><img class="photo__img" src="source/img/sedona.png" width="0" height="0" alt="Мост Дьявола"></a>
             <figcaption class="photo_inscription">
               <p class="photo__name">Мост Дьявола</p>
               <span class="photo__author">Автор фото: Антон</span>
