--- a/source/index.html
+++ b/source/index.html
@@ -34,19 +34,17 @@
               <p class="reasons__item__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
               <img class="reasons-item__image" src="img/photo-1.jpg" width="30" height="30" alt="фото Седоны">
             </li>
-            <li class="reasons__item features">
-              <div class="features__item">
-                <h3 class="features__item__title">Жилье</h3>
-                <p class="features__item__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-              </div>
-              <div class="features__item">
-                <h3 class="features__item__title">Еда</h3>
-                <p class="features__item__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-              </div>
-              <div class="features__item">
-                <h3 class="features__item__title">Сувениры</h3>
-                <p class="features__item__text">Не только китайского, но и местного производства!</p>
-              </div>
+            <li class="reasons__item feature">
+              <h3 class="feature__item__title">Жилье</h3>
+              <p class="feature__item__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </li>
+            <li class="reasons__item feature">
+              <h3 class="feature__item__title">Еда</h3>
+              <p class="feature__item__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li class="reasons__item feature">
+              <h3 class="feature__item__title">Сувениры</h3>
+              <p class="feature__item__text">Не только китайского, но и местного производства!</p>
             </li>
             <li class="reasons__item reasons__item--reason-second">
               <h3 class="reasons__item__title">Там есть Мост Дьявола</h3>
