Исправил ошибку на странице с фото

--- a/source/photo.html
+++ b/source/photo.html
@@ -19,7 +19,7 @@
         </ul>
       </nav>
     </header>
-    <main class="page__form page-photo">
+    <main class="page__photo page-photo">
       <h1 class="visually-hidden">Седона</h1>
       <div class="page-photo__promo photo-promo">
         <img class="photo-promo__img" src="source/img/sedona.png" width="0" height="0" alt="Welcome to Sedona">
