--- a/source/index.html
+++ b/source/index.html
@@ -8,9 +8,9 @@
   <body class="page">
     <header class="page__header page-header">
       <a class="page-header__logo logo" href="https://htmlacademy.ru/intensive/adaptive">
-        <img class="logo__image" src="img/logotype-mobile.svg" width="30" height="30" alt="Логотип Седона">
+        <img class="logo__image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
       </a>
-      <button class="page-header__toggle" type="button">Открыть меню</button>
+      <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <nav class="main-nav page-header__nav">
         <ul class="page-header__nav__list site-list">
           <li class="site-list__item"><a class="site-list__item-link">Главная</a></li>
