--- a/source/form.html
+++ b/source/form.html
@@ -9,10 +9,12 @@
 
 <body class="page">
   <header class="page__header page-header">
-    <a class="page-header__logo logo" href="https://htmlacademy.ru/intensive/adaptive">
-      <img class="logo__image" src="img/logotype-mobile.svg" width="30" height="30" alt="Логотип Седона">
-    </a>
-    <button class="page-header__toggle" type="button">Открыть меню</button>
+    <div class="page-header--top">
+      <a class="page-header__logo logo">
+        <img class="logo__image logo__image--align-logo" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
+      </a>
+      <button class="page-header__toggle page-header__toggle--align-menu" type="button"><span class="visually-hidden">Открыть меню</span></button>
+    </div>
     <nav class="main-nav page-header__nav">
       <ul class="page-header__nav__list site-list">
         <li class="site-list__item"><a class="site-list__item-link" href="index.html">Главная</a></li>
