Стилизует индекс и футер

--- a/source/form.html
+++ b/source/form.html
@@ -11,9 +11,9 @@
   <header class="page__header page-header">
     <div class="page-header--top">
       <a class="page-header__logo logo">
-        <img class="logo__image logo__image--align-logo" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
+        <img class="logo__image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
       </a>
-      <button class="page-header__toggle page-header__toggle--align-menu" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <!--<button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>-->
     </div>
     <nav class="main-nav page-header__nav">
       <ul class="page-header__nav__list site-list">
@@ -103,7 +103,8 @@
       <li class="social-networks__item"><a class="social-networks--youtube" href="https://youtube.com"><span class="visually-hidden">Седона
             на Youtube</span></a></li>
     </ul>
-    <p class="page-footer__powered-by powered-by">Разработано<a class="powered-by-link" href="https://htmlacademy.ru/intensive/adaptive">htmlacademy.ru</a></p>
+    <p class="page-footer__powered-by powered-by">Разработано
+      <a class="powered-by-link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">htmlacademy.ru</span></a></p>
   </footer>
 </body>
 
