--- a/source/index.html
+++ b/source/index.html
@@ -9,9 +9,9 @@
     <header class="page__header page-header">
       <div class="page-header--top">
         <a class="page-header__logo logo">
-          <img class="logo__image logo__image--align-logo" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
+          <img class="logo__image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
         </a>
-        <button class="page-header__toggle page-header__toggle--align-menu" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <!--<button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>-->
       </div>
       <nav class="main-nav page-header__nav">
         <ul class="page-header__nav__list site-list">
@@ -25,7 +25,7 @@
     <main class="page__main page-main">
       <h1 class="visually-hidden">Седона</h1>
       <div class="page-main__promo promo">
-        <img class="promo__img" src="source/img/sedona.png" width="0" height="0" alt="Welcome to Sedona">
+        <img class="promo__img" src="img/text-sedona-index.svg" width="280" height="210" alt="Welcome to Sedona">
       </div>
       <h2 class="promo__content">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
       <section class="page-main__reasons reasons">
@@ -33,9 +33,9 @@
           <ul class="reasons__list">
             <li class="reasons__item reasons__item--reason-first">
               <h3 class="reasons__item__title">Настоящий городок</h3>
-              <span class="reasons__item__num">№1</span>
+              <div class="reasons__item__num">№1</div>
               <p class="reasons__item__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
-              <img class="reasons-item__image" src="img/photo-1.jpg" width="30" height="30" alt="фото Седоны">
+              <img class="reasons-item__image" src="img/main-city-mobile@1x.jpg" width="320" height="300" alt="фото Седоны">
             </li>
             <li class="reasons__item feature">
               <h3 class="feature__item__title">Жилье</h3>
@@ -51,23 +51,23 @@
             </li>
             <li class="reasons__item reasons__item--reason-second">
               <h3 class="reasons__item__title">Там есть Мост Дьявола</h3>
-              <span class="reasons__item__num">№2</span>
+              <div class="reasons__item__num">№2</div>
               <p class="reasons__item__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-              <img class="reasons-item__image" src="img/photo-2.jpg" width="30" height="30" alt="фото мост дьявола">
+              <img class="reasons-item__image" src="img/photo-bridge-mobile@1x.jpg" width="320" height="300" alt="фото мост дьявола">
             </li>
             <li class="reasons__item reasons__item--reason-third">
               <h3 class="reasons__item__title">Небольшая площадь</h3>
-              <span class="reasons__item__num">№3</span>
+              <div class="reasons__item__num">№3</div>
               <p class="reasons__item__text">Все достопримечательности находятся очень близко</p>
             </li>
             <li class="reasons__item reasons__item--reason-fourth">
               <h3 class="reasons__item__title">Красивая дорога</h3>
-              <span class="reasons__item__num">№4</span>
+              <div class="reasons__item__num">№4</div>
               <p class="reasons__item__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="reasons__item reasons__item--reason-fifth">
               <h3 class="reasons__item__title">Мало туристов</h3>
-              <span class="reasons__item__num">№5</span>
+              <div class="reasons__item__num">№5</div>
               <p class="reasons__item__text">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
           </ul>
@@ -78,7 +78,7 @@
           и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="hotels-searching__link" href="hotels.html">Найти гостиницу</a>
         <div class="map">
-            <img class="map__sedona" src="img/map-sedona.png" width="30" height="30" alt="Седона на карте">
+            <img class="map__sedona" src="img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Седона на карте">
         </div>
       </section>
     </main>
@@ -89,7 +89,8 @@
         <li class="social-networks__item"><a class="social-networks--fb" href="https://facebook.com"><span class="visually-hidden">Седона в Фэйсбук</span></a></li>
         <li class="social-networks__item"><a class="social-networks--youtube" href="https://youtube.com"><span class="visually-hidden">Седона на Youtube</span></a></li>
       </ul>
-      <p class="page-footer__powered-by powered-by">Разработано<a class="powered-by-link" href="https://htmlacademy.ru/intensive/adaptive">htmlacademy.ru</a></p>
+      <p class="page-footer__powered-by powered-by">Разработано
+        <a class="powered-by-link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">htmlacademy.ru</span></a></p>
     </footer>
   </body>
 </html>
