--- a/source/index.html
+++ b/source/index.html
@@ -76,7 +76,7 @@
         <h3 class="hotels-searching__title">Заинтересовались?</h3>
         <p class="hotels-searching__text">Укажите предполагаемые даты поездки,
           и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="hotels-searching__link" href="hotels.html">Найти гостиницу</a>
+        <a class="button" href="hotels.html">Найти гостиницу</a>
         <div class="map">
             <img class="map__sedona" src="img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Седона на карте">
         </div>
