--- a/source/index.html
+++ b/source/index.html
@@ -15,10 +15,10 @@
       </div>
       <nav class="main-nav page-header__nav">
         <ul class="page-header__nav__list site-list">
-          <li class="site-list__item"><a class="site-list__item-link">Главная</a></li>
-          <li class="site-list__item"><a class="site-list__item-link" href="photo.html">Фото и видео</a></li>
-          <li class="site-list__item"><a class="site-list__item-link" href="form.html">Форма отзыва</a></li>
-          <li class="site-list__item"><a class="site-list__item-link" href ="#">html Academy</a></li>
+          <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px">Главная</a></li>
+          <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px" href="photo.html">Фото и видео</a></li>
+          <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px" href="form.html">Форма отзыва</a></li>
+          <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px" href ="#">html Academy</a></li>
         </ul>
       </nav>
     </header>
@@ -27,69 +27,69 @@
       <div class="page-main__promo promo">
         <img class="promo__img" src="img/text-sedona-index.svg" width="280" height="210" alt="Welcome to Sedona">
       </div>
-      <h2 class="promo__content">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <h2 class="promo__content text--weight-bold text--size--medium text--line-height--26px">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
       <section class="page-main__reasons reasons">
-        <h2 class="reasons__title"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h2>
+        <h2 class="reasons__title text--weight-normal text--size--small text--line-height--26px"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h2>
           <ul class="reasons__list">
             <li class="reasons__item reasons__item--reason-first">
-              <h3 class="reasons__item__title">Настоящий городок</h3>
-              <div class="reasons__item__num">№1</div>
-              <p class="reasons__item__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
+              <h3 class="reasons__item__title text--weight-normal text--size--large text--line-height--10px">Настоящий городок</h3>
+              <div class="reasons__item__num text--weight-normal text--size--small text--line-height--15px">№1</div>
+              <p class="reasons__item__text text--weight-normal text--size--small text--line-height--21px">Седона не аттракцион для туристов, там течет своя жизнь</p>
               <img class="reasons-item__image" src="img/main-city-mobile@1x.jpg" width="320" height="300" alt="фото Седоны">
             </li>
             <li class="reasons__item feature">
-              <h3 class="feature__item__title">Жилье</h3>
-              <p class="feature__item__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              <h3 class="feature__item__title text--weight-bold text--size--medium text--line-height--26px">Жилье</h3>
+              <p class="feature__item__text text--weight-normal text--size--small text--line-height--21px">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
             <li class="reasons__item feature">
-              <h3 class="feature__item__title">Еда</h3>
-              <p class="feature__item__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              <h3 class="feature__item__title text--weight-bold text--size--medium text--line-height--26px">Еда</h3>
+              <p class="feature__item__text text--weight-normal text--size--small text--line-height--21px">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="reasons__item feature">
-              <h3 class="feature__item__title">Сувениры</h3>
-              <p class="feature__item__text">Не только китайского, но и местного производства!</p>
+              <h3 class="feature__item__title text--weight-bold text--size--medium text--line-height--26px">Сувениры</h3>
+              <p class="feature__item__text text--weight-normal text--size--small text--line-height--21px">Не только китайского, но и местного производства!</p>
             </li>
             <li class="reasons__item reasons__item--reason-second">
-              <h3 class="reasons__item__title">Там есть Мост Дьявола</h3>
-              <div class="reasons__item__num">№2</div>
-              <p class="reasons__item__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+              <h3 class="reasons__item__title text--weight-normal text--size--large text--line-height--10px">Там есть Мост Дьявола</h3>
+              <div class="reasons__item__num text--weight-normal text--size--small text--line-height--15px">№2</div>
+              <p class="reasons__item__text text--weight-normal text--size--small text--line-height--21px">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               <img class="reasons-item__image" src="img/photo-bridge-mobile@1x.jpg" width="320" height="300" alt="фото мост дьявола">
             </li>
             <li class="reasons__item reasons__item--reason-third">
-              <h3 class="reasons__item__title">Небольшая площадь</h3>
-              <div class="reasons__item__num">№3</div>
-              <p class="reasons__item__text">Все достопримечательности находятся очень близко</p>
+              <h3 class="reasons__item__title text--weight-normal text--size--large text--line-height--10px">Небольшая площадь</h3>
+              <div class="reasons__item__num text--weight-normal text--size--small text--line-height--15px">№3</div>
+              <p class="reasons__item__text text--weight-normal text--size--small text--line-height--21px">Все достопримечательности находятся очень близко</p>
             </li>
             <li class="reasons__item reasons__item--reason-fourth">
-              <h3 class="reasons__item__title">Красивая дорога</h3>
-              <div class="reasons__item__num">№4</div>
-              <p class="reasons__item__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <h3 class="reasons__item__title text--weight-normal text--size--large text--line-height--10px">Красивая дорога</h3>
+              <div class="reasons__item__num text--weight-normal text--size--small text--line-height--15px">№4</div>
+              <p class="reasons__item__text text--weight-normal text--size--small text--line-height--21px">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="reasons__item reasons__item--reason-fifth">
-              <h3 class="reasons__item__title">Мало туристов</h3>
-              <div class="reasons__item__num">№5</div>
-              <p class="reasons__item__text">Большинство едет в Гранд Каньон и толпится там</p>
+              <h3 class="reasons__item__title text--weight-normal text--size--large text--line-height--10px">Мало туристов</h3>
+              <div class="reasons__item__num text--weight-normal text--size--small text--line-height--15px">№5</div>
+              <p class="reasons__item__text text--weight-normal text--size--small text--line-height--21px">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
           </ul>
       </section>
       <section class="page-main__hotels-searching hotels-searching">
-        <h3 class="hotels-searching__title">Заинтересовались?</h3>
-        <p class="hotels-searching__text">Укажите предполагаемые даты поездки,
+        <h3 class="hotels-searching__title text--weight-bold text--size--medium text--line-height--26px">Заинтересовались?</h3>
+        <p class="hotels-searching__text text--weight-normal text--size--small text--line-height--24px">Укажите предполагаемые даты поездки,
           и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button" href="hotels.html">Найти гостиницу</a>
+        <a class="button text--weight-bold text--size--large text--line-height--26px" href="hotels.html">Найти гостиницу</a>
         <div class="map">
             <img class="map__sedona" src="img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Седона на карте">
         </div>
       </section>
     </main>
     <footer class="page__footer page-footer">
-      <span class="page-footer__hashtag-sedona">#VISITSEDONA</span>
+      <span class="page-footer__hashtag-sedona text--weight-bold text--size--large text--line-height--26px">#VISITSEDONA</span>
       <ul class="page-footer__social-networks social-networks">
         <li class="social-networks__item"><a class="social-networks--twitter" href="https://twitter.com"><span class="visually-hidden">Седона в Твиттере</span></a></li>
         <li class="social-networks__item"><a class="social-networks--fb" href="https://facebook.com"><span class="visually-hidden">Седона в Фэйсбук</span></a></li>
         <li class="social-networks__item"><a class="social-networks--youtube" href="https://youtube.com"><span class="visually-hidden">Седона на Youtube</span></a></li>
       </ul>
-      <p class="page-footer__powered-by powered-by">Разработано
+      <p class="page-footer__powered-by powered-by text--weight-normal text--size--small text--line-height--26px">Разработано
         <a class="powered-by-link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">htmlacademy.ru</span></a></p>
     </footer>
   </body>
