--- a/source/form.html
+++ b/source/form.html
@@ -17,10 +17,10 @@
     </div>
     <nav class="main-nav page-header__nav">
       <ul class="page-header__nav__list site-list">
-        <li class="site-list__item"><a class="site-list__item-link" href="index.html">Главная</a></li>
-        <li class="site-list__item"><a class="site-list__item-link" href="photo.html">Фото и видео</a></li>
-        <li class="site-list__item"><a class="site-list__item-link">Форма отзыва</a></li>
-        <li class="site-list__item"><a class="site-list__item-link" href="#">html Academy</a></li>
+        <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px" href="index.html">Главная</a></li>
+        <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px" href="photo.html">Фото и видео</a></li>
+        <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px">Форма отзыва</a></li>
+        <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px" href="#">html Academy</a></li>
       </ul>
     </nav>
   </header>
@@ -29,72 +29,72 @@
     <div class="page-form__promo form-promo">
       <img class="form-promo__img" src="img/text-sedona.svg" width="233" height="40" alt="Welcome to Sedona">
     </div>
-    <h2 class="form-promo__content">Оставьте свой отзыв</h2>
-    <p class="form-promo__text">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а так же о посещенных вами
+    <h2 class="form-promo__content text--weight-bold text--size--medium text--line-height--26px">Оставьте свой отзыв</h2>
+    <p class="form-promo__text text--weight-normal text--size--small text--line-height--24px">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а так же о посещенных вами
         достопримечательностях</p>
     <form class="page-form__form form" action="https://echo.htmlacademy.ru" method="post">
       <fieldset class="form__personal-datas personal-datas">
-        <legend class="personal-datas__title">Представьтесь:</legend>
+        <legend class="personal-datas__title text--weight-bold text--size--medium text--line-height--26px">Представьтесь:</legend>
         <p>
-          <label class="personal-datas__label" for="firstname">имя:</label>
-          <input class="personal-datas__input" type="text" name="firstname" id="firstname" placeholder="Петр"> </p>
+          <label class="personal-datas__label text--weight-normal text--size--small text--line-height--26px" for="firstname">имя:</label>
+          <input class="personal-datas__input text--weight-bold text--size--medium text--line-height--26px" type="text" name="firstname" id="firstname" placeholder="Петр"> </p>
         <p>
-          <label class="personal-datas__label" for="lastname">фамилия:</label>
-          <input class="personal-datas__input" type="text" name="lastname" id="lastname" placeholder="Иванов"> </p>
+          <label class="personal-datas__label text--weight-normal text--size--small text--line-height--26px" for="lastname">фамилия:</label>
+          <input class="personal-datas__input text--weight-bold text--size--medium text--line-height--26px" type="text" name="lastname" id="lastname" placeholder="Иванов"> </p>
         <p>
-          <label class="personal-datas__label" for="middlename">отчество:</label>
-          <input class="personal-datas__input" type="text" name="middlename" id="middlename" placeholder="Александрович">
+          <label class="personal-datas__label text--weight-normal text--size--small text--line-height--26px" for="middlename">отчество:</label>
+          <input class="personal-datas__input text--weight-bold text--size--medium text--line-height--26px" type="text" name="middlename" id="middlename" placeholder="Александрович">
         </p>
       </fieldset>
       <fieldset class="form__contact-information contact-information">
-        <legend class="contact-information__title">Контактная информация:</legend>
+        <legend class="contact-information__title text--weight-bold text--size--medium text--line-height--26px">Контактная информация:</legend>
         <p>
-          <label class="contact-information__label" for="tel">Контактный телефон*:</label>
-          <input class="contact-information__input" type="tel" name="tel" id="tel" placeholder="Введите телефон"> </p>
+          <label class="contact-information__label text--weight-normal text--size--small text--line-height--26px" for="tel">Контактный телефон*:</label>
+          <input class="contact-information__input text--weight-bold text--size--medium text--line-height--26px" type="tel" name="tel" id="tel" placeholder="Введите телефон"> </p>
         <p>
-          <label class="contact-information__label" for="email">Электронная почта*:</label>
-          <input class="contact-information__input" type="email" name="email" id="email" placeholder="Введите e-mail">
+          <label class="contact-information__label text--weight-normal text--size--small text--line-height--26px" for="email">Электронная почта*:</label>
+          <input class="contact-information__input text--weight-bold text--size--medium text--line-height--26px" type="email" name="email" id="email" placeholder="Введите e-mail">
         </p>
       </fieldset>
       <fieldset class="form__impression impression">
-        <legend class="impression__title">Ваше общее впечатление</legend>
+        <legend class="impression__title text--weight-bold text--size--medium text--line-height--26px">Ваше общее впечатление</legend>
         <p>
           <input class="impression__choice" type=radio name="radio" id="positive" checked>
-          <label for="positive" tabindex="0">Скорее положительное</label></p>
+          <label class="text--weight-bold text--size--medium text--line-height--26px" for="positive" tabindex="0">Скорее положительное</label></p>
         <p>
           <input class="impression__choice" type=radio name="radio" id="negative">
-          <label for="negative" tabindex="0">Скорее отрицательное</label></p>
+          <label class="text--weight-bold text--size--medium text--line-height--26px" for="negative" tabindex="0">Скорее отрицательное</label></p>
         <p>
           <input class="impression__choice" type=radio name="radio" id="complicated">
-          <label for="complicated" tabindex="0">Затрудняюсь ответить</label></p>
+          <label class="text--weight-bold text--size--medium text--line-height--26px" for="complicated" tabindex="0">Затрудняюсь ответить</label></p>
       </fieldset>
       <fieldset class="form__landmarks landmarks">
-        <legend class="landmarks__title">Посещенные достопримечательности</legend>
+        <legend class="landmarks__title text--weight-bold text--size--medium text--line-height--26px">Посещенные достопримечательности</legend>
         <p>
           <input class="landmarks__choice" type=checkbox name="devilsbridge" id="devilsbridge" checked>
-          <label for="devilsbridge" tabindex="0">Мост Дьявола</label></p>
+          <label class="text--weight-bold text--size--medium text--line-height--26px" for="devilsbridge" tabindex="0">Мост Дьявола</label></p>
         <p>
           <input class="landmarks__choice" type=checkbox name="mountainbell" id="mountainbell" checked>
-          <label for="mountainbell" tabindex="0">Гора-Колокол</label></p>
+          <label class="text--weight-bold text--size--medium text--line-height--26px" for="mountainbell" tabindex="0">Гора-Колокол</label></p>
         <p>
           <input class="landmarks__choice" type=checkbox name="slidepark" id="slidepark" checked>
-          <label for="slidepark" tabindex="0">Слайд-парк</label></p>
+          <label class="text--weight-bold text--size--medium text--line-height--26px" for="slidepark" tabindex="0">Слайд-парк</label></p>
         <p>
           <input class="landmarks__choice" type=checkbox name="redrocks" id="redrocks">
-          <label for="redrocks" tabindex="0">Красные скалы</label></p>
+          <label class="text--weight-bold text--size--medium text--line-height--26px" for="redrocks" tabindex="0">Красные скалы</label></p>
       </fieldset>
-      <fieldset class="form_comment comment">
-        <legend class="comment__title">Опишите свои эмоции</legend>
+      <fieldset class="form__comment comment">
+        <legend class="comment__title text--weight-bold text--size--medium text--line-height--26px">Опишите свои эмоции</legend>
         <p>
           <label for="comment"></label>
-          <textarea class="comment__text" name="comment" id="comment" placeholder="Опишите подробно все свои восторги"></textarea>
+          <textarea class="comment__text text--weight-bold text--size--medium text--line-height--26px" name="comment" id="comment" placeholder="Опишите подробно все свои восторги"></textarea>
       </fieldset>
       <label for="send"></label>
-      <input class="button" name="send" id="send" type="submit" value="Отправить отзыв">
+      <input class="button text--weight-bold text--size--large text--line-height--26px" name="send" id="send" type="submit" value="Отправить отзыв">
     </form>
   </main>
   <footer class="page__footer page-footer">
-    <span class="page-footer__hashtag-sedona">#VISITSEDONA</span>
+    <span class="page-footer__hashtag-sedona text--weight-bold text--size--large text--line-height--26px">#VISITSEDONA</span>
     <ul class="page-footer__social-networks social-networks">
       <li class="social-networks__item"><a class="social-networks--twitter" href="https://twitter.com"><span class="visually-hidden">Седона
             в Твиттере</span></a></li>
@@ -103,7 +103,7 @@
       <li class="social-networks__item"><a class="social-networks--youtube" href="https://youtube.com"><span class="visually-hidden">Седона
             на Youtube</span></a></li>
     </ul>
-    <p class="page-footer__powered-by powered-by">Разработано
+    <p class="page-footer__powered-by powered-by text--weight-normal text--size--small text--line-height--26px">Разработано
       <a class="powered-by-link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">htmlacademy.ru</span></a></p>
   </footer>
 </body>
