--- a/source/form.html
+++ b/source/form.html
@@ -9,18 +9,18 @@
 
 <body class="page">
   <header class="page__header page-header">
-    <div class="page-header--top">
+    <nav class="page-header__nav page-header-nav">
       <a class="page-header__logo logo">
         <img class="logo__image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
       </a>
       <!--<button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>-->
-    </div>
-    <nav class="main-nav page-header__nav">
-      <ul class="page-header__nav__list site-list">
+      <ul class="page-header-nav__list site-list site-list--left">
         <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px" href="index.html">Главная</a></li>
         <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px" href="photo.html">Фото и видео</a></li>
+      </ul>
+      <ul class="page-header-nav__list site-list site-list--right">
         <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px">Форма отзыва</a></li>
-        <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px" href="#">html Academy</a></li>
+        <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px" href ="#">html Academy</a></li>
       </ul>
     </nav>
   </header>
@@ -104,7 +104,7 @@
             на Youtube</span></a></li>
     </ul>
     <p class="page-footer__powered-by powered-by text--weight-normal text--size--small text--line-height--26px">Разработано
-      <a class="powered-by-link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">htmlacademy.ru</span></a></p>
+      <a class="powered-by__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">htmlacademy.ru</span></a></p>
   </footer>
 </body>
 
